mlservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: mlservice
  name: mlservice
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: mlservice
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
          convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/isolation-network: "true"
        io.kompose.service: mlservice
    spec:
      containers:
      - image: shahidla/mlservice
        imagePullPolicy: ""
        name: mlservice
        ports:
        - containerPort: 3050
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
