mlservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: mlservice
  name: mlservice
spec:
  ports:
  - name: "3050"
    port: 3050
    targetPort: 3050
  selector:
    io.kompose.service: mlservice
status:
  loadBalancer: {}
